# idnadrev2server

./: .gitignore  .travis.yml  Cargo.toml  README.md  Rocket.toml  appveyor.yml  idnadrev.toml
config/: log4rs.yaml
old/: Cargo.toml
old/config/: log4rs.yaml
old/src/: main.rs
old/src/actor/: mod.rs
old/src/crypt/: error.rs
old/src/crypt/actor/: mod.rs
old/src/crypt/actor/state/: mod.rs  scanresult.rs
old/src/crypt/structs/: repository.rs
old/src/crypt/structs/serialize/: mod.rs
old/src/crypt/util/: tempfile.rs
old/src/dto/: enc_types.rs
old/src/dto/file/: id.rs  mod.rs  reduced_file.rs
old/src/dto/repository/: descriptor.rs  open_repo.rs
old/src/rest/: cors.rs  mod.rs
old/src/search/: filter.rs  mod.rs  searchparam.rs
old/src/state/: mod.rs
repository/: Cargo.toml  file.proto  sync.proto
repository/src/: error.rs  lib.rs
repository/src/crypt/: mod.rs
repository/src/files/: mod.rs
repository/src/pb/: file.rs  mod.rs  sync.rs
repository/src/repository/: file.rs  mod.rs  repository.rs
repository/src/sync/: mod.rs
serverrepository/: Cargo.toml
src/: config.rs  main.rs  state.rs
src/actor/: mod.rs
src/crypt/: actor.rs  crypt.rs  error.rs  io.rs  mod.rs  serialize.rs  service.rs
src/crypt/actor/: communication.rs  dto.rs  function.rs  mod.rs
src/crypt/actor/state/: mod.rs  repositorystate.rs  scanresult.rs
src/crypt/structs/: crypto.rs  file.rs  mod.rs  repository.rs
src/crypt/structs/serialize/: mod.rs
src/crypt/util/: io.rs  mod.rs  tempfile.rs
src/crypt_old/: actor.rs  crypt.rs  mod.rs
src/dto/: mod.rs
src/dto/file/: descriptor.rs  file.rs  id.rs  mod.rs  reduced_file.rs
src/dto/repository/: create_repo.rs  descriptor.rs  id.rs  mod.rs  open_repo.rs  token.rs
src/dto/search/: mod.rs
src/dummy/: mod.rs
src/ironext/: mod.rs
src/repository/: communication.rs  crypt.rs  mod.rs  service.rs
src/rest/: cors.rs  dto.rs  mod.rs  search.rs  searchparam.rs  ui.rs
src/search/: filter.rs  mod.rs  searchparam.rs
src/state/: mod.rs
webrepository/: Cargo.toml
