[package]
name = "idnadrev2rust"
version = "0.1.0"
authors = ["krampenschiesser <krampenschiesser@gmail.com>"]

[dependencies]
#rocket = { version = "*", features = ["tls"]}
rocket = "0.2.6"
rocket_codegen = "0.2.6"
rocket_contrib = {version = "0.2.6", default-features=true, features=["uuid"]}
#serde = "1.0.0"
#serde_json = "1.0.0"
#serde_derive = "1.0.0"
serde = "0.9"
rayon = "0.7.0"
serde_json = "0.9"
serde_derive = "0.9"
base64 = "~0.4.0"
ring = "0.7.6"
ring-pwhash = {git = "https://github.com/krampenschiesser/ring-pwhash.git"}
#ring-pwhash = "0.1.2"
rand = "0.3.15"
byteorder = { version = "1", features =["std"]}
uuid = { version= "0.4.0", features = ["v4", "serde"]}
chrono = { version = "=0.3.0", features = ["serde"] }
tempdir= "0.3.5"
notify = "4.0.0"
log = "0.3.7"
log4rs = "0.6.3"
distance = "0.4"
needle = "0.1.1"
thread_local = "0.3.3"

[dev-dependencies]
rocket = { version = "0.2.6", features = ["testing"] }
spectral = "0.6.0"