[package]
name = "idnadrev2rust"
version = "0.1.0"
authors = ["krampenschiesser <krampenschiesser@gmail.com>"]

[dependencies]
serde = "1.0.8"
serde_json = "1.0.2"
serde_derive = "1.0.8"
rayon = "0.8.2"
base64 = "0.5.2"
ring = "0.9.7"
ring-pwhash = "0.2.0"
rand = "0.3.15"
byteorder = { version = "1", features =["std"]}
uuid = { version= "0.5.0", features = ["v4", "serde"]}
chrono = { version = "0.4.0", features = ["serde"] }
tempdir= "0.3.5"
notify = "4.0.1"
log = "0.3.8"
log4rs = "0.7.0"
distance = "0.4"
needle = "0.1.1"
thread_local = "0.3.3"
sha1 = "0.2.0"

## iron
iron = "0.5.1"
router = "0.5.1"
persistent = "0.3.0"
mount = "0.3.0"
#urlencoded = "0.5.0"
bodyparser = "0.7.0"
#params = "0.6.0"
hyper = "0.10.12"
mime = "0.2.6"
unicase = "2.0.0"
reqwest = "0.7.1"

[dev-dependencies]
spectral = "0.6.0"

[replace]
#"chrono:0.3.0" = "chrono:0.3.1"