[package]
name = "idnadrev2rust"
version = "0.1.0"
authors = ["krampenschiesser <krampenschiesser@gmail.com>"]

[dependencies]
serde = "1.0.33"
serde_json = "1.0.12"
serde_derive = "1.0.33"
rayon = "1.0.1"
base64 = "0.9.0"
ring = "0.12.1"
ring-pwhash = "0.12.0"
rand = "0.4.2"
byteorder = { version = "1.2.1", features =["std"]}
uuid = { version= "0.6.1", features = ["v4", "serde"]}
chrono = { version = "0.4.0", features = ["serde"] }
tempdir= "0.3.6"
notify = "4.0.3"
log = "0.4.1"
log4rs = "0.8.0"
distance = "0.4"
needle = "0.1.1"
thread_local = "0.3.5"
sha1 = "0.2.0"
toml = "0.4.5"

reqwest = "0.8.5"
rest_in_rust = {git = "https://github.com/krampenschiesser/rest_in_rust"}
http = "0.1.5"

[dev-dependencies]
spectral = "0.6.0"

[replace]
#"chrono:0.3.0" = "chrono:0.3.1"